# ros_monitor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  router.ts
frontend/src/api/: client.ts
frontend/src/assets/: main.css
frontend/src/components/common/: SearchModal.vue  StatsCard.vue
frontend/src/components/dashboard/: ActivityFeed.vue  FrequencyChart.vue
frontend/src/components/layout/: AppHeader.vue  AppLayout.vue  AppSidebar.vue  ConnectionIndicator.vue
frontend/src/components/nodes/: NodeDetail.vue  NodeList.vue
frontend/src/components/topics/: TopicList.vue  (+4 more)
frontend/src/composables/: useKeyboardShortcuts.ts  useMessageWorker.ts  usePolling.ts  useRosApi.ts  useUrlState.ts  useWebSocket.ts
frontend/src/stores/: connection.ts  nodes.ts  topics.ts
frontend/src/theme/: naive-overrides.ts
frontend/src/types/: index.ts
frontend/src/views/: DashboardView.vue  NodesView.vue  TopicsView.vue
frontend/src/workers/: message-parser.worker.ts
ros2_web_monitor/: __init__.py  app.py  config.py  main.py
ros2_web_monitor/core/: dependencies.py  errors.py  middleware.py
ros2_web_monitor/plugins/: __init__.py  base.py  registry.py
ros2_web_monitor/plugins/nodes/: __init__.py  plugin.py  router.py  schemas.py  service.py
ros2_web_monitor/plugins/topics/: __init__.py  plugin.py  router.py  schemas.py  service.py
ros2_web_monitor/ros_bridge/: __init__.py  executor.py  node.py  subscription_manager.py  type_utils.py
